# momentum-spyrographs

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: performance-review.md
src/momentum_spyrographs/: __init__.py  __main__.py  cli.py  render.py  sim.py
src/momentum_spyrographs/app/: __init__.py  loop_search_worker.py  main.py  map_worker.py  preview_worker.py  state.py  window.py
src/momentum_spyrographs/app/widgets/: collapsible_panel.py  creative_field.py  export_dialog.py  inspector_panel.py  pendulum_canvas.py  preset_library.py  spirograph_preview.py  stability_map.py  style_studio.py  suggestion_strip.py
src/momentum_spyrographs/core/: __init__.py  analysis_config.py  coherence.py  discovery.py  map_tiles.py  models.py  presets.py  project.py  recurrence.py  render.py  sim.py  stability_kernel.py  stability_map.py
tests/: test_core.py  test_ui.py
