[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-spyrographs"
version = "0.2.0"
description = "Native desktop app and CLI for double-pendulum momentum spyrographs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "platformdirs>=4.3",
  "PySide6>=6.7",
]

[project.scripts]
momentum-spyrographs = "momentum_spyrographs.app.main:main"
momentum-spyrographs-cli = "momentum_spyrographs.cli:main"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10",
  "pytest>=8.3",
  "pytest-qt>=4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
